guile-1.6 (1.6.3-5) unstable; urgency=low

  * remove --list-missing from debian/rules. (closes: bug#187926)
  * try fix for libqthreads-12 per-arch build problem. (closes: bug#183686)
  * fix alpha qt assembly bugs. (closes: bug#186981)

 --

guile-1.6 (1.6.3-4) unstable; urgency=low

  * first 1.6 upload to unstable.

 -- Rob Browning <rlb@defaultvalue.org>  Thu, 27 Feb 2003 18:49:46 -0600

guile-1.6 (1.6.3-3) unstable; urgency=low

  * change some /usr/bin/guile references to /usr/bin/guile-1.6 so we make
    sure to get the right version (thanks Dale).
  * unreleased test version.

 -- Rob Browning <rlb@defaultvalue.org>  Fri,  7 Feb 2003 12:09:34 -0600

guile-1.6 (1.6.3-2) unstable; urgency=low

  * rearrange guile so it allows guile1.4 and guile-1.6 to coexist.
  * unreleased test version.

 -- Rob Browning <rlb@defaultvalue.org>  Wed,  5 Feb 2003 15:09:16 -0600

guile-1.6 (1.6.3-1) unstable; urgency=low

  * unreleased test version.

 -- Rob Browning <rlb@defaultvalue.org>  Sat,  1 Feb 2003 10:16:48 -0600

guile-1.6 (1.6.2-1) unstable; urgency=low

  * new upstream release (still not ready for Debian proper yet).

 -- Rob Browning <rlb@defaultvalue.org>  Thu, 30 Jan 2003 14:17:23 -0600

guile-1.6 (1.6.1-3) unstable; urgency=low

  * handle non-qthreads architectures properly.

 -- Rob Browning <rlb@defaultvalue.org>  Mon, 16 Dec 2002 23:48:51 -0600

guile-1.6 (1.6.1-2) unstable; urgency=low

  * include libguilereadline-v-12.so.* too.
  * add conflicts/replaces goops-doc to guile-1.6-doc.

 -- Rob Browning <rlb@defaultvalue.org>  Sat, 23 Nov 2002 17:12:33 -0600

guile-1.6 (1.6.1-1) unstable; urgency=low

  * trial pkg.

 -- Rob Browning <rlb@defaultvalue.org>  Mon, 11 Nov 2002 10:52:58 -0600