@@ -2,4 +2,4 @@
   needs="text" \
   section="Apps/Programming" \
   title="Guile 1.6"\
-  command="/usr/bin/guile"
+  command="/usr/bin/guile-1.6"
