@@ -1,0 +1,9 @@
+#! /bin/sh
+
+set -e
+
+if [ "$1" != "upgrade" ] ; then
+    update-alternatives --remove guile /usr/bin/guile-1.6
+fi 
+
+#DEBHELPER#
